Fix picture gets out of the viewport

--- a/static/styleClient.css
+++ b/static/styleClient.css
@@ -1,11 +1,13 @@
 html, body {
   height: 100vh;
   width: 100vw;
+  margin: 0;
   overflow: hidden;
 }
 
 img {
   max-height: 70vh;
+  width: 90%;
   margin: 0 auto;
   display: block;
 }
